[tool.poetry]
name = "fastapi-di-sample"
version = "0.1.0"
description = ""
authors = ["shimat"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
python-dotenv = "^0.19.2"
dependency-injector = {extras = ["yaml"], version = "^4.38.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
requests = "^2.27.1"
taskipy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# fastapi = "src.fastapi_di_sample.app:main"

[tool.taskipy.tasks]
fastapi = {cmd = "uvicorn src.fastapi_di_sample.app:app --port 8000 --env-file .env --reload --reload-dir ./", help = "Launch test server"}
test = { cmd = "pytest tests", help = "Run all unit tests" }
flake8 = {cmd = "flake8 src tests"}
mypy = {cmd = "mypy src tests"}